CounterContentData::counter() and ImageContentData::image() should return references <http://webkit.org/b/128671>

Reviewed by Darin Adler.

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::contentToCSSValue):
- Update to use references.  Remove useless ASSERTs.

* css/StyleResolver.cpp:
(WebCore::StyleResolver::loadPendingImages):
- Update to use references.  StyleResolver::loadPendingImage()
  will be changed to take a reference in the near future.

* rendering/RenderElement.cpp:
(WebCore::RenderElement::createFor):
- Update to use references.  The auto keyword wanted to
  instantiate a StyleImage instead a reference, so it was
  replaced.

* rendering/style/ContentData.h:
(WebCore::ImageContentData::ImageContentData): Add ASSERT that
m_image is not NULL.
(WebCore::ImageContentData::image): Return a reference.  Remove
useless overload with identical name.
(WebCore::ImageContentData::cloneInternal): Simplify by using
implicit PassRefPtr constructor.
(WebCore::operator==): Remove unneeded deref operators.
(WebCore::CounterContentData::counter): Return a reference.
(WebCore::CounterContentData::cloneInternal): Remove unneeded
deref operator.
(WebCore::operator==): Remove unneeded deref operators.

Canonical link: https://commits.webkit.org/146948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164224 268f45cc-cd09-0410-ab3c-d52691b4dbfc